src/Styles/CareerDetails.css
/* Add this CSS file to your project and import it in the CareerDetails component */
.career-details-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 2rem;
    position: relative;
  }

  .back_btn
  {
    position: absolute;
    left: 5px;
  }
  
  .career-details-container img {
    width: 100%;
    height: 65vh;
    aspect-ratio: 16/9;
    border-radius: 1rem;
    margin-bottom: 1.5rem;
    box-shadow: 0 0px 8px rgba(0, 0, 0, 0.5);
  }
  
  .career-details-container h1,
  .career-details-container h2 {
    color: #333;
    text-align: center;
  }
  
  .career-details-container h1 {
    font-size: 2.5rem;
    font-weight: bold;
    margin-bottom: 0.5rem;
  }
  
  .career-details-container h2 {
    font-size: 1.5rem;
    font-weight: 500;
    margin-bottom: 1rem;
  }
  
  .career-details-container p {
    font-size: 1rem;
    color: #555;
    text-align: justify;
    padding: 0 1rem;
    line-height: 1.5;
  }
  
  .career-details-container .enroll-btn,
  .career-details-container .submit-btn,
  .career-details-container .open-btn,
  .career-details-container .pending-btn {
    display: block;
    justify-content: center;
    width: 10rem;
    height: 3rem;
    margin: 1rem auto;
    background-color: #1e90ff;
    color: white;
    border-radius: 0.5rem;
    text-align: center;
    line-height: 3rem;
    font-size: 1rem;
    cursor: pointer;
    transition: background-color 0.3s ease;
  }
  
  .career-details-container .enroll-btn:hover,
  .career-details-container .submit-btn:hover,
  .career-details-container .open-btn:hover,
  .career-details-container .pending-btn:hover {
    background-color: #1c86ee;
  }
  
  .career-details-container .input-field {
    width: 20rem;
    height: 3rem;
    border: 1px solid #ccc;
    border-radius: 0.5rem;
    margin: 1rem auto;
    padding: 0.5rem;
    font-size: 1rem;
    text-align: center;
    display: none;
  }
  
  .career-details-container .login-error {
    color: red;
    margin-top: 1rem;
    text-align: center;
  }
  
  .career-details-content-container
  {
    padding: 30px;
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    justify-content: space-around;
  }

  .career-details-content
  {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 15px;
    margin-top: 50px;
  }

  .career-details-qr{
    margin-top: 50px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: fit-content;
    width: 400px;
    box-shadow: 0px 0px 5px grey;
    border-radius: 10px;
    padding: 15px;
  }

  .career-details-qr img
  {
    height: 250px;
    width: 250px;
  }

  .qr-heading
  {
    font-size: 2vw;
    margin-top: 20px;
    margin-bottom: 20px;
  }

